add README file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </script>
 </head>
 <body>
-  <div id="left">
+  <div>
     <textarea id="textarea"></textarea>
   </div>
   <div id="right"></div>
